Add tests for UserService (finally)